--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "electric-sql": "^0.12.1",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
